# oxideav-speex

./: CHANGELOG.md  Cargo.toml  NOTICES  README.md
src/: bitreader.rs  bitwriter.rs  codec.rs  decoder.rs  encoder.rs  header.rs  hexc_tables.rs  inband.rs  lib.rs  lsp.rs  lsp_tables_wb.rs  modes.rs  nb_decoder.rs  nb_encoder.rs  qmf.rs  quant.rs  stereo.rs  uwb_decoder.rs  uwb_encoder.rs  wb_decoder.rs  wb_encoder.rs  wb_submodes.rs
tests/: decode_nb.rs  encode_nb.rs  encode_uwb.rs  encode_wb.rs  inband.rs  stereo.rs
