[package]
name = "oxideav-speex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust Speex (CELP speech codec) — header parser + bit reader + scaffold"

readme = "README.md"
homepage.workspace = true
keywords = ["multimedia", "audio", "speex", "voice", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = { workspace = true }
oxideav-codec = { workspace = true }

[dev-dependencies]
oxideav-ogg = { workspace = true }
oxideav-container = { workspace = true }
