[package]
name = "oxideav-speex"
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT AND BSD-3-Clause"
repository = "https://github.com/OxideAV/oxideav-speex"
authors = ["Mark Karpeles"]
description = "Pure-Rust Speex (CELP speech codec) — NB/WB/UWB decoder + encoder with Ogg integration"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-speex"
keywords = ["multimedia", "audio", "speex", "voice", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"
# Distributed-slice auto-registration into `oxideav_core::REGISTRARS`
# via the `oxideav_core::register!` macro. Tiny crate, no transitive
# deps; works on every target including wasm.
linkme = "0.3"
[dev-dependencies]
oxideav-ogg = "0.1"
